<resources>
    <string name="app_name">FAN4DRY</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="connection">Connection</string>
    <string name="store">Store</string>
    <string name="help">Help</string>
    <string name="setup">Setup</string>

    <string name="apply">Apply</string>

    <string name="fan_auto">Fan Auto</string>
    <string name="preheat_temperature">Preheat Temperature</string>
    <string name="sab_pause">SAB Pause</string>
    <string name="boost_mode">Boost Mode</string>
    <string name="sync_time_with_mobile">Sync with mobile date/time</string>

    <string name="device_pin_code">Device pin code</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="SAB_number">SAB Number</string>
    <string name="contract">Administrative data</string>

    <string name="please_wait">Please wait...</string>

    <string name="applied">Applied</string>
    <string name="all_applied">All commands applied</string>

    <string name="Bluetooth_not_enabled_onActivityResult">Bluetooth not enabled onActivityResult</string>
    <string name="Location_permission_denied">Location permission denied</string>
    <string name="Connection_to">Connecting to: </string>
    <string name="bluetooth_not_enable_plesse_connect">Bluetooth not enabled. Please enable it to scan nearby LE devices</string>
    <string name="connecting_to_device">"Connected to device.Discovering services..."</string>

    <string name="connect_to_SAB_first">Connect to SAB first</string>
    <string name="reconnecting_to_SAB">Reconnecting to SAB</string>
    <string name="SAB_disconnected">SAB disconnected</string>

</resources>
