<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/slideMenuContainer">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
			android:orientation="horizontal"
            android:gravity="center_vertical">

			<ImageView
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:adjustViewBounds="true"
				android:scaleType="fitXY"
				android:src="@drawable/icon"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/logo_text"/>

		</LinearLayout>


		<LinearLayout android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="15dp"
            android:gravity="center_vertical"
			android:id="@+id/slideHome"
            android:onClick="onSlideStatusClick">
	        
	        <ImageView android:layout_width="40dp"
	            android:layout_height="wrap_content"
	            android:id="@+id/slideIconHome"
	            android:src="@drawable/dashboard_icon"
	            android:scaleType="fitXY"
	            android:adjustViewBounds="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="25dp"></ImageView>
	    
		    <TextView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/status"
		        android:textColor="@color/colorBlack"
		        android:height="50dp"
		        android:gravity="center_vertical"
		        android:layout_marginLeft="25dp"
		        android:textSize="24sp"
		        android:id="@+id/txtslidestatus"
                ></TextView>
	    
	    </LinearLayout>

		<include layout="@layout/layout_gray_separator"></include>

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
            android:gravity="center_vertical"
			android:id="@+id/slideSettings"
            android:onClick="onSlideSettingsClick">

			<ImageView
				android:id="@+id/slideIconSettings"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:src="@drawable/settings_icon"
				android:scaleType="fitXY"
				android:adjustViewBounds="true"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="25dp"></ImageView>

			<TextView android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/settings"
				android:textColor="@color/colorBlack"
				android:textSize="24sp"
				android:height="50dp"
				android:gravity="center_vertical"
				android:layout_marginLeft="25dp"
                android:id="@+id/txtslidesettings"
                ></TextView>

		</LinearLayout>

		<include layout="@layout/layout_gray_separator"></include>
	    
	    <LinearLayout android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:orientation="horizontal"
            android:gravity="center_vertical"
			android:id="@+id/slideConnection"
            android:onClick="onSlideConnectionClick">
	        
	        <ImageView 
	            android:id="@+id/slideIconConnection"
	            android:layout_width="30dp"
	            android:layout_height="wrap_content"
	            android:src="@drawable/connection_icon"
	            android:scaleType="fitXY"
	            android:adjustViewBounds="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="30dp"></ImageView>
	    
		    <TextView android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/connection"
		        android:textColor="@color/colorBlack"
		        android:textSize="24sp"
		        android:height="50dp"
		        android:gravity="center_vertical"
		        android:layout_marginLeft="30dp"
		        ></TextView>
	    
	    </LinearLayout>

		<include layout="@layout/layout_gray_separator"></include>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/slideStore"
            android:onClick="onSlideStoreClick">

            <ImageView
                android:id="@+id/slideIconStore"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/store_icon"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"></ImageView>

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:height="50dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp"
                ></TextView>

        </LinearLayout>

        <include layout="@layout/layout_gray_separator"></include>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/slideHelp"
            android:onClick="onSlideHelpClick">

            <ImageView
                android:id="@+id/slideIconHelp"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/help_icon"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="25dp"></ImageView>

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:height="50dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="25dp"
                ></TextView>

        </LinearLayout>

        <include layout="@layout/layout_gray_separator"></include>

		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
            android:gravity="center_vertical"
			android:id="@+id/slideSetup"
            android:onClick="onSlideSetupClick">

			<ImageView
				android:id="@+id/slideIconSetup"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:src="@drawable/setup_icon"
				android:scaleType="fitXY"
				android:adjustViewBounds="true"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="25dp"></ImageView>

			<TextView android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/setup"
				android:textColor="@color/colorBlack"
				android:textSize="24sp"
				android:height="50dp"
				android:gravity="center_vertical"
				android:layout_marginLeft="25dp"
				></TextView>

		</LinearLayout>

		<include layout="@layout/layout_gray_separator"></include>

    </LinearLayout>

</ScrollView>
