<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBackground">

        <include layout="@layout/layout_db_header_bar" android:id="@+id/headerbar"></include>

        <LinearLayout
            android:id="@+id/statuscontainer"
            android:layout_below="@id/headerbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/user"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/user"
                    android:id="@+id/txtusername" />

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pass"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/password"
                android:id="@+id/txtpassword" />

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <RelativeLayout
                android:id="@+id/sabnumcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtsabnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="X"/>

                <TextView
                    android:id="@+id/imgsabnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="@string/SAB_number"
                    android:layout_centerVertical="true"/>

                <SeekBar
                    android:id="@+id/spinnersabnum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/imgsabnum"
                    android:layout_toLeftOf="@id/txtsabnum"
                    android:layout_centerVertical="true"
                    android:max="10"></SeekBar>

            </RelativeLayout>

            <include layout="@layout/layout_gray_separator"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/contract"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/contract"
                android:id="@+id/txtcontractname" />

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <RelativeLayout
                android:id="@+id/fanspeedcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:visibility="visible"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtfanspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="X"/>

                <ImageView
                    android:id="@+id/imgfan"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fan"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"/>

                <SeekBar
                    android:id="@+id/spinnerfanspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:max="16"
                    android:layout_toRightOf="@id/imgfan"
                    android:layout_toLeftOf="@id/txtfanspeed"
                    android:layout_centerVertical="true"></SeekBar>

            </RelativeLayout>

            <include layout="@layout/layout_gray_separator"></include>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/apply"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:textColor="#FFFFFF"
            android:onClick="applyClick"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/layoutSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <include layout="@layout/layout_slidemenu"></include>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>