<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBackground">

        <include layout="@layout/layout_db_header_bar" android:id="@+id/headerbar"></include>

        <LinearLayout
            android:id="@+id/statuscontainer"
            android:layout_below="@id/headerbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtsabname"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="Name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/txtfirmware"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="Firmware"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/txtidentifier"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:text="Firmware"/>

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <Switch
                android:id="@+id/btnfanspeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fan_auto" />

            <RelativeLayout
                android:id="@+id/fanspeedcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgfan"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fan"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/txtfanspeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <SeekBar
                    android:id="@+id/spinnerfanspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:max="15"
                    android:layout_toLeftOf="@id/txtfanspeed"
                    android:layout_toRightOf="@id/imgfan"/>

            </RelativeLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <Switch
                android:id="@+id/btnpreheattemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preheat_temperature"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/preheattemperaturecontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgtemperature"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/preheat_temperature"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/txtpreheattemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <SeekBar
                    android:id="@+id/spinnerpreheattemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:max="9"
                    android:layout_toLeftOf="@id/txtpreheattemperature"
                    android:layout_toRightOf="@id/imgtemperature"/>

            </RelativeLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <Switch
                android:id="@+id/btnpausesab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sab_pause" />

            <RelativeLayout
                android:id="@+id/pausesabcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imgpause"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pause"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/txtpausesab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <SeekBar
                    android:id="@+id/spinnerpausesab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="3"
                    android:layout_toLeftOf="@id/txtpausesab"
                    android:layout_toRightOf="@id/imgpause"></SeekBar>

            </RelativeLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgboost"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/boost"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <Switch
                    android:id="@+id/btnboost"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/boost_mode" />

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imgdatetime"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/datetime_icon"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/txtdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/txttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBlack"/>

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgsync"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/sync_icon"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_alignParentLeft="true"/>

            <Switch
                android:id="@+id/btnsynctime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/sync_time_with_mobile"
                android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <include layout="@layout/layout_gray_separator"></include>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/apply"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:textColor="#FFFFFF"
            android:onClick="applyClick"/>

    </RelativeLayout>

    <LinearLayout android:id="@+id/layoutSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <include layout="@layout/layout_slidemenu"></include>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>